--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   http: ^1.2.2
   shared_preferences: ^2.3.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,12 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/ic_logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
 flutter:
 
   # The following line ensures that the Material Icons font is
